--- a/index.html
+++ b/index.html
@@ -351,12 +351,14 @@
         <!-- video section -->
         <section id = "video">
             <div class = "video-wrapper flex">
-                <video loop>
-                    <source src = "videos/video-section.mp4" type = "video/mp4">
+                <video autoplay muted loop playsinline>
+                    <source src = "videos/end.mp4" type = "video/mp4">
                 </video>
+                <!--
                 <button type = "button" id = "play-btn">
                     <i class = "fas fa-play"></i>
                 </button>
+            -->
             </div>
         </section>
         <!-- end of video section -->
@@ -368,37 +370,20 @@
                     <a href = "index.html" class = "site-brand">
                         Noelle<span>Liebe</span>
                     </a>
-                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet voluptates maiores nam vitae iusto. Placeat rem sint voluptas natus exercitationem autem quod neque, odit laudantium reiciendis ipsa suscipit veritatis voluptate.</p>
+                    <!--
+                    <p class = "text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet voluptates maiores nam vitae iusto. Placeat rem sint voluptas natus exercitationem autem quod neque, odit laudantium reiciendis ipsa suscipit veritatis voluptate.</p> -->
                 </div>
 
                 <div class = "footer-item">
-                    <h2>Follow us on: </h2>
+                    <h2>Follow me on: </h2>
                     <ul class = "social-links">
-                        <li>
-                            <a href = "#">
-                                <i class = "fab fa-facebook-f"></i>
-                            </a>
-                        </li>
                         <li>
                             <a href = "#">
                                 <i class = "fab fa-instagram"></i>
                             </a>
                         </li>
-                        <li>
-                            <a href = "#">
-                                <i class = "fab fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href = "#">
-                                <i class = "fab fa-pinterest"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href = "#">
-                                <i class = "fab fa-google-plus"></i>
-                            </a>
-                        </li>
+
+        
                     </ul>
                 </div>
 
