--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                     window.OneSignal = window.OneSignal || [];
                     OneSignal.push(function() {
                       OneSignal.init({
-                        appId: "YOUR-APP-ID-HERE", // ganti sama App ID kamu
+                        appId: "d5a11f93-1eab-4530-8a17-89eb5c1cf597", // ganti sama App ID kamu
                         notifyButton: {
                           enable: true
                         }
