--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
         <link rel = "stylesheet" href = "css/utility.css">
         <link rel = "stylesheet" href = "css/style.css">
         <link rel = "stylesheet" href = "css/responsive.css">
-        <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
-        <script>
-          window.OneSignalDeferred = window.OneSignalDeferred || [];
-          OneSignalDeferred.push(async function(OneSignal) {
-            await OneSignal.init({
-              appId: "d5a11f93-1eab-4530-8a17-89eb5c1cf597",
-            });
-          });
-        </script>
+        <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" async></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "d5a11f93-1eab-4530-8a17-89eb5c1cf597",
+      notifyButton: { enable: true },
+      autoRegister: true
+    });
+  });
+</script>
+
     </head>
     <body>
         <!-- navbar  -->
