--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ document.addEventListener("DOMContentLoaded", () => {
                             <a href = "index.html" class = "nav-link">Home</a>
                         </li>
                         <li class = "nav-item">
+                            <a href = "playlist.html" class = "nav-link">Playlist</a>
+                        </li>
+                        <li class = "nav-item">
                             <a href = "gallery.html" class = "nav-link">Gallery</a>
                         </li>
                         <li class = "nav-item">
@@ -155,7 +158,7 @@ document.addEventListener("DOMContentLoaded", () => {
                 </div>
 
                 <div class = "featured-row">
-                    <div class = "featured-item my-2 shadow">
+                    <div class = "featured-item my-2 shadow" onclick="window.location.href='playlist.html'" style="cursor: pointer;">
                         <img src = "images/playlist.jpg" alt = "featured place">
                         <div class = "featured-item-content">
                             <span>
