--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                                     <a href = "playlist.html" class = "nav-link">Playlist</a>
                                 </li>
                                 <li class = "nav-item">
+                                    <a href = "https://noellemovies.vercel.app" class = "nav-link">Movies</a>
+                                </li>
+                                <li class = "nav-item">
                                     <a href = "gallery.html" class = "nav-link">Gallery</a>
                                 </li>
                                 <li class = "nav-item">
