--- a/playlist.html
+++ b/playlist.html
@@ -40,6 +40,10 @@
                         <li class = "nav-item">
                             <a href = "playlist.html" class = "nav-link">Playlist</a>
                         </li>
+
+                        <li class = "nav-item">
+                            <a href = "https://noellemovies.vercel.app" class = "nav-link">Movies</a>
+                        </li>
                         
                         <li class = "nav-item">
                             <a href = "gallery.html" class = "nav-link">Gallery</a>
