--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
                                     <a href = "gallery.html" class = "nav-link">Gallery</a>
                                 </li>
                                 <li class = "nav-item">
+                                    <a href = "decor.html" class = "nav-link">Decor</a>
+                                </li>
+                                <li class = "nav-item">
                                     <a href = "blog.html" class = "nav-link">Blog</a>
                                 </li>
                                 <li class = "nav-item">
