--- a/playlist.html
+++ b/playlist.html
@@ -48,6 +48,10 @@
                         <li class = "nav-item">
                             <a href = "gallery.html" class = "nav-link">Gallery</a>
                         </li>
+
+                        <li class = "nav-item">
+                            <a href = "decor.html" class = "nav-link">Decor</a>
+                        </li>
                         
                         <li class = "nav-item">
                             <a href = "blog.html" class = "nav-link">Blog</a>
