--- a/playlist.html
+++ b/playlist.html
@@ -6,6 +6,31 @@
         <title>NoelleLiebe</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1", maximum-scale=1, user-scalable=no">
+        <style>
+            .decor-section {
+              display: flex !important;
+              flex-wrap: wrap !important;
+              margin: 0 !important;
+              padding: 0 !important;
+            }
+        
+            .decor-item {
+              flex: 0 0 20% !important; /* 5 per baris */
+              max-width: 20% !important;
+              box-sizing: border-box !important;
+              padding: 5px !important;
+            }
+        
+            @media only screen and (max-width: 1200px),
+                   only screen and (max-width: 992px),
+                   only screen and (max-width: 768px),
+                   only screen and (max-width: 576px) {
+              .decor-item {
+                flex: 0 0 20% !important;
+                max-width: 20% !important;
+              }
+            }
+          </style>
         <!-- font awesome cdn -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- fonts -->
