--- a/decor.html
+++ b/decor.html
@@ -2,20 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-        <style>
-          .decor-section {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.decor-item {
-  flex: 0 0 20%; /* 5 item per baris */
-  box-sizing: border-box;
-  padding: 5px; /* optional */
-}
-
-        </style>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>NoelleLiebe</title>
         <!-- font awesome cdn -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
