--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                                     </div>
                                                 </div>
                                                 
-                                                <div class = "featured-item my-2 shadow">
+                                                <div class = "featured-item my-2 shadow" onclick="window.location.href='decor.html'" style="cursor: pointer;">
                                                     <img src = "images/decor.jpg" alt = "featured place">
                                                     <div class = "featured-item-content">
                                                         <span>
