--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
                                         </div>
                                     </div>
                                     
-                                    <div class = "featured-item my-2 shadow">
+                                    <div class = "featured-item my-2 shadow" onclick="window.location.href='https://noellemovies.vercel.app'" style="cursor: pointer;">
                                         <img src = "images/movies.jpg" alt = "featured place">
-                                        <div class = "featured-item-content" onclick="window.location.href='https://noellemovies.vercel.app'" style="cursor: pointer;">
+                                        <div class = "featured-item-content">
                                             <span>
                                                 <i class="fas fa-film"></i>Movies</span>
                                             <div>
