--- a/decor.html
+++ b/decor.html
@@ -74,7 +74,7 @@
               <div class="decor-card shadow">
                 <img src="images/decor-2.webp" alt="Decor Item 2">
                 <div class="decor-content">
-                  <h3>Christmas Tree Decoration Set 4IN1 Gold Ornaments</h3>
+                  <h3>Decoration Set 4IN1 Gold Ornaments</h3>
                   <p class="price">Rp9.244</p>
                   <a href="https://shopee.co.id/Paket-Aksesoris-Natal-4IN1-Dekorasi-Murah-i.1160540437.24161335233?extraParams=%7B%22display_model_id%22%3A245286744251%2C%22model_selection_logic%22%3A2%7D&sp_atk=aa5ce03b-a6b9-485e-bfd5-2156b9d37d6d&xptdk=aa5ce03b-a6b9-485e-bfd5-2156b9d37d6d" class="btn">Add to Cart</a>
                 </div>
@@ -83,7 +83,7 @@
               <div class="decor-card shadow">
                 <img src="images/decor-3.webp" alt="Decor Item 3">
                 <div class="decor-content">
-                  <h3>Santa, Reindeer & Snowman Christmas Table Decoration</h3>
+                  <h3>Christmas Table Decoration</h3>
                   <p class="price">Rp9.680</p>
                   <a href="https://shopee.co.id/ACC76-Aksesoris-Natal-Boneka-Santa-Snowman-Resin-i.26466853.27516832395?extraParams=%7B%22display_model_id%22%3A217954139422%2C%22model_selection_logic%22%3A2%7D&sp_atk=fe66ac9e-73f5-4097-bc9c-7f40a9ecaa12&xptdk=fe66ac9e-73f5-4097-bc9c-7f40a9ecaa12" class="btn">Add to Cart</a>
                 </div>
@@ -131,7 +131,7 @@
               <div class="decor-card shadow">
                 <img src="images/decor-8.jpg" alt="Decor Item 8">
                 <div class="decor-content">
-                  <h3>Christmas Snowflake Window Stickers Set (135Pcs) </h3>
+                  <h3>Snowflake Window Stickers(135Pcs) </h3>
                   <p class="price">$6.99</p>
                   <a href="https://www.amazon.com/LUDILO-Christmas-Snowflakes-Decorations-Thanksgiving/dp/B07HHBQJGJ/ref=sr_1_1?crid=3IGCBLJEYMG5W&dib=eyJ2IjoiMSJ9.Qn7skJYZgAmO9cufFdUPPBqab7ecDlKG4Tz-JA1RymChtl1Q0pZLaKCEZshnzK-txQyOQBT5vE5ird9t3EPm8FMmh2FGZDjYcNuIHjp4IexBDmK61KxCl1Z_wNaxu9eWowhZQZziinW95Xd61l9MWXra_h7Q1Ur1icSSsoJcs3C3igiXWb8Lh1sAkd-IwE9VwWjdEYyXlvI2Ds4y0Iqot1cL8ofwTHISqqhT68om4aWB-TT1VO7rQfjGLuT62JHPlP_q2O8UEovisyGaLuCnJUc0HEjpBN18yjKry0ekyng.pmx215siLPR_RgQHG0l4kHwGuyggyohT65vVy5SM2FI&dib_tag=se&keywords=christmas%2Bdecorations&qid=1761982861&sprefix=christmas%2Bdec%2Caps%2C346&sr=8-1&th=1" class="btn">Add to Cart</a>
                 </div>
@@ -140,7 +140,7 @@
               <div class="decor-card shadow">
                 <img src="images/decor-9.jpg" alt="Decor Item 9">
                 <div class="decor-content">
-                  <h3>Warm White LED Fairy Curtain Lights (300 LEDs)</h3>
+                  <h3>LED Fairy Curtain Lights (300 LEDs)</h3>
                   <p class="price">$8.49</p>
                   <a href="https://www.amazon.com/Brightown-Lighting-Christmas-Decoration-Weddings/dp/B0FCXP8VTT/ref=sr_1_10?crid=3IGCBLJEYMG5W&dib=eyJ2IjoiMSJ9.Qn7skJYZgAmO9cufFdUPPBqab7ecDlKG4Tz-JA1RymChtl1Q0pZLaKCEZshnzK-txQyOQBT5vE5ird9t3EPm8FMmh2FGZDjYcNuIHjp4IexBDmK61KxCl1Z_wNaxu9eWowhZQZziinW95Xd61l9MWXra_h7Q1Ur1icSSsoJcs3C3igiXWb8Lh1sAkd-IwE9VwWjdEYyXlvI2Ds4y0Iqot1cL8ofwTHISqqhT68om4aWB-TT1VO7rQfjGLuT62JHPlP_q2O8UEovisyGaLuCnJUc0HEjpBN18yjKry0ekyng.pmx215siLPR_RgQHG0l4kHwGuyggyohT65vVy5SM2FI&dib_tag=se&keywords=christmas%2Bdecorations&qid=1761982861&sprefix=christmas%2Bdec%2Caps%2C346&sr=8-10&th=1" class="btn">Add to Cart</a>
                 </div>
@@ -266,7 +266,7 @@
               <div class="decor-card shadow">
                 <img src="images/decor-22.webp" alt="Decor Item 22">
                 <div class="decor-content">
-                  <h3>Noelle Christmas Carousel Music Decoration</h3>
+                  <h3>Noelle Carousel Music Decoration</h3>
                   <p class="price">Rp499.950</p>
                   <a href="https://www.ruparupa.com/azko/p/noelle-22-cm-miniatur-dekorasi-natal-christmas-carousel-glitter-music.html?itm_source=AZKO-search&itm_campaign=direct_search&itm_term=noelle-%26-10586021&itm_device=desktop&queryId=bdb19a4cbfe5b4bccc130b33d55111ff&index=productsvariant_ahi&sid=05mncZoBSC0oiPerE4SZ&location=Search" class="btn">Add to Cart</a>
                 </div>
@@ -581,7 +581,7 @@
               <div class="decor-card shadow">
                 <img src="images/decor-55.webp" alt="Decor Item 55">
                 <div class="decor-content">
-                  <h3>JAKI Christmas Tree Building Block Music Box</h3>
+                  <h3>Christmas Tree Block Music Box</h3>
                   <p class="price">Rp119.000</p>
                   <a href="https://shopee.co.id/JAKI-Kotak-Musik-Pohon-Natal-Blok-Bangunan-Dekorasi-Natal-Rakitan-Balok-Bricks-Susun-Music-Box-Gift-i.975646632.25688252154?extraParams=%7B%22display_model_id%22%3A185548786719%2C%22model_selection_logic%22%3A3%7D&sp_atk=54510ef4-9bbe-410c-8af2-64fb83b2e16f&xptdk=54510ef4-9bbe-410c-8af2-64fb83b2e16f" class="btn">Add to Cart</a>
                 </div>
@@ -602,7 +602,7 @@
               <div class="decor-card shadow">
                 <img src="images/decor-57.png" alt="Decor Item 57">
                 <div class="decor-content">
-                  <h3>Noel 3 18cm chocolate</h3>
+                  <h3>Swiss Deli Cake Noel 3 18cm chocolate</h3>
                   <p class="price">Rp168.000</p>
                   <a href="https://maps.app.goo.gl/Q73bbut6aQbcLe6x9" class="btn">Add to Cart</a>
                 </div>
@@ -611,7 +611,7 @@
               <div class="decor-card shadow">
                 <img src="images/decor-58.png" alt="Decor Item 58">
                 <div class="decor-content">
-                  <h3>Noel 6 vanilla</h3>
+                  <h3>Swiss Deli Cake Noel 6 vanilla</h3>
                   <p class="price">Rp160.000</p>
                   <a href="https://maps.app.goo.gl/Q73bbut6aQbcLe6x9" class="btn">Add to Cart</a>
                 </div>
@@ -620,7 +620,7 @@
               <div class="decor-card shadow">
                 <img src="images/decor-59.png" alt="Decor Item 59">
                 <div class="decor-content">
-                  <h3>Noel 4 15cm vanilla</h3>
+                  <h3>Swiss Deli Cake Noel 4 15cm vanilla</h3>
                   <p class="price">Rp138.000</p>
                   <a href="https://maps.app.goo.gl/Q73bbut6aQbcLe6x9" class="btn">Add to Cart</a>
                 </div>
@@ -629,7 +629,7 @@
               <div class="decor-card shadow">
                 <img src="images/decor-60.png" alt="Decor Item 60">
                 <div class="decor-content">
-                  <h3>Noel 1 vanilla</h3>
+                  <h3>Swiss Deli Cake Noel 1 vanilla</h3>
                   <p class="price">Rp225.000</p>
                   <a href="https://maps.app.goo.gl/Q73bbut6aQbcLe6x9" class="btn">Add to Cart</a>
                 </div>
