--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
         <title>NoelleLiebe</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:type" content="website" />
+<meta property="og:title" content="NoelleLiebe" />
+<meta property="og:description" content="Shares the beauty of moments" />
+<meta property="og:image" content="https://noelleliebe.vercel.app/images/thumbnail.jpg" />
+<meta property="og:url" content="https://noelleliebe.vercel.app/" />
+<meta property="og:site_name" content="NoelleLiebe" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="NoelleLiebe" />
+<meta name="twitter:description" content="Shares the beauty of moments" />
+<meta name="twitter:image" content="https://noelleliebe.vercel.app/images/thumbnail.jpg" />
+<meta name="description" content="Shares the beauty of moments" />
+<meta name="theme-color" content="#ffffff" />
+
         <!-- font awesome cdn -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- fonts -->
