--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <meta name="twitter:image" content="https://noelleliebe.vercel.app/images/thumbnail.jpg" />
         <meta name="description" content="Shares the beauty of moments" />
         <meta name="theme-color" content="#ffffff" />
+        <link rel="icon" href="favicon.png" type="image/png">
+        <link rel="apple-touch-icon" href="favicon.png">
+        <meta name="theme-color" content="#ffffff">
         <!-- font awesome cdn -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <!-- fonts -->
